# apple-music-py

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: build.yml
plugin/claude-code/.claude-plugin/: plugin.json
plugin/claude-code/commands/: now-playing.md
plugin/claude-code/skills/playlist-curation/: SKILL.md
src/apple_music/: client.py
src/clawtunes/: cli.py
src/clawtunes_helpers/: playback.py
tests/: test_playback.py
